--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
     rel="stylesheet">
 
 
-  <title>Google Book Search</title>
+  <title>Kojonup Historical Society Search</title>
 </head>
 
 <body>
